programacion/structpack-1.2/utils/csp_toegen.h

#ifndef CSP_TOEGEN_H
#define CSP_TOEGEN_H

    void csp_dkms( double *t, double *eps, int *n );
    void csp_dsweet1( double *t, double *eps, int *n );
    void csp_dsweet2( double *t, double *eps, int *n );
    void csp_dsweet3( double *t, int *n );
    void csp_dfreud0( double *t, int *n );
    void csp_dfreud1( double *t, int *n );
    void csp_dfreud3( double *t, int *n );
#endif